blog-security/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        image: nisa17/laravel-blog:latest  # o la imagen que subas a DockerHub
        ports:
        - containerPort: 80
